# travis-ci-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md
src/: Node.cpp  main.cpp
src/inc/: Node.hpp
